# Tutorial_ITK_Filter

./: CMakeLists.txt
ellipseCreation/: CMakeLists.txt  ellipseCreation.cpp  ellipseCreation.cxx
meanFilter/: CMakeLists.txt  meanFilter.cxx  meanFilter.xml
medianFilter/: CMakeLists.txt  medianFilter.cpp  medianFilter.cxx
ownFilter/: CMakeLists.txt  multiThreadedOwnFilter.cxx  multiThreadedOwnFilter.h  multiThreadedOwnFilter.hxx  multiThreadedOwnFilter.xml  ownFilter.cxx  ownFilter.h  ownFilter.hxx
ownFilter/Testing/: CMakeLists.txt  exceptionTestMain.h  itkTestMain.h  ownFilterExceptions.cxx  ownFilterTests.cxx
ownFilter/Testing/data/: basicYinYang.png.md5  reverseYinYang.png.md5  testYinYang.png.md5
